lavender: Declare if we support f2fs

--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -1,6 +1,6 @@
 CONFIG_THERMAL_SWITCH=y
 CONFIG_KERNEL_CUSTOM_F7A=y
-CONFIG_LOCALVERSION="-LA.UM.7.2.r1-06500-sdm660.0"
+CONFIG_LOCALVERSION="-LA.UM.7.2.r1-06500-sdm660.0-f2fs"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
