--- a/drivers/staging/qcacld-3.0/Kconfig
+++ b/drivers/staging/qcacld-3.0/Kconfig
@@ -136,11 +136,16 @@ config BUILD_TIMESTAMP
 	bool "Embed timestamp in wlan version"
 	default n
 
+config WLAN_FEATURE_SARV1_TO_SARV2
+	bool "Enable conversion of SAR v1 to v2 feature"
+	default n
+
 config WLAN_FEATURE_FILS
 	bool "Enable FILS_SK feature"
 	default n
 
-config WLAN_FEATURE_SARV1_TO_SARV2
-	bool "Enable conversion of SAR v1 to v2 feature"
+config QCACLD_FEATURE_METERING
+	bool "Stats & Quota Metering feature"
 	default n
+
 endif # QCA_CLD_WLAN
