--- a/arch/arm/boot/dts/qcom/sdm660.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660.dtsi
@@ -293,56 +293,58 @@
 
 		CPU_COST_0: core-cost0 {
 			busy-cost-data = <
-				 633600 23
-				 902400 139
-				1113600 259
-				1401600 482
-				1536000 690
-				1747200 870
-				1843200 1102
+				 633600 1014
+				 902400 1810
+				1113600 2317
+				1401600 3310
+				1536000 4514
+				1747200 6088
+				1843200 7156
 			>;
 			idle-cost-data = <
-				20 16 12 8
+				4 4 0 0
 			>;
 		};
 		CPU_COST_1: core-cost1 {
 			busy-cost-data = <
-				1113600 749
-				1401600 1443
-				1747200 2576
-				1958400 4153
-				2150400 5941
-				2208000 6688
+				1113600 5575
+				1401600 8109
+				1747200 12372
+				1804800 16449
+				1958400 21934
+				2150400 28356
+				2208000 33322
 			>;
 			idle-cost-data = <
-				100 80 60 40
+				10 10 0 0
 			>;
 		};
 		CLUSTER_COST_0: cluster-cost0 {
 			busy-cost-data = <
-				 633600 8
-				 902400 14
-				1113600 20
-				1401600 29
-				1536000 35
-				1747200 49
-				1843200 62
+				 633600 21
+				 902400 28
+				1113600 32
+				1401600 39
+				1536000 45
+				1747200 53
+				1843200 61
 			>;
 			idle-cost-data = <
-				4 3 2 1
+				31 31 31 0
 			>;
 		};
 		CLUSTER_COST_1: cluster-cost1 {
 			busy-cost-data = <
-				1113600 135
-				1401600 193
-				1747200 272
-				1958400 363
-				2150400 519
-				2208000 585
+				1113600 46
+				1401600 70
+				1747200 120
+				1804800 130
+				1958400 178
+				2150400 202
+				2208000 203
 			>;
 			idle-cost-data = <
-				4 3 2 1
+				50 50 50 0
 			>;
 		};
 	};
@@ -472,7 +474,7 @@
 		};
 
 		cont_splash_mem: splash_region@9d400000 {
-			reg = <0x0 0x9d400000 0x0 0x23ff000>;
+			reg = <0x0 0x9d400000 0x0 0x02400000>;
 			label = "cont_splash_mem";
 		};
 
@@ -482,11 +484,6 @@
 			linux,remove-completely;
 			reg = <0x0 0xA0000000 0x0 0x00400000>;
 			label = "pstore_reserve_mem";
-		};
-
-		dfps_data_mem: dfps_data_mem@0x9f7ff000 {
-		       reg = <0 0x9f7ff000 0 0x00001000>;
-		       label = "dfps_data_mem";
 		};
 	};
 
@@ -974,8 +971,9 @@
 	qcom,msm-core@780000 {
 		compatible = "qcom,apss-core-ea";
 		reg = <0x780000 0x1000>;
-		qcom,low-hyst-temp = <100>;
-		qcom,high-hyst-temp = <100>;
+		qcom,low-hyst-temp = <10>;
+		qcom,high-hyst-temp = <5>;
+		qcom,polling-interval = <100>;
 
 		ea0: ea0 {
 			sensor = <&sensor_information1>;
